--- a/public/common.css
+++ b/public/common.css
@@ -10,6 +10,14 @@ body{
 	padding:10px 5px;
 	margin-bottom:25px;
 }
+pre {
+	font-family: "Microsoft Yahei",Arial,Helvetica;
+	white-space: pre-wrap; /*css-3*/ 
+	white-space: -moz-pre-wrap; /*Mozilla,since1999*/ 
+	white-space: -pre-wrap; /*Opera4-6*/ 
+	white-space: -o-pre-wrap; /*Opera7*/ 
+	word-wrap: break-word; /*InternetExplorer5.5+*/
+}
 .example{
 	padding-top:40px;
 	margin-bottom:90px;
