--- a/public/style/common.css
+++ b/public/style/common.css
@@ -13,6 +13,13 @@ a{
 	color:#333;
 }
 
+.header{
+	width: 960px;
+	padding-top: 20px;
+	margin: 0 auto;
+	line-height: 30px;
+	text-align: right;
+}
 .main{
 	width:960px;
 	margin: 50px auto 0;
