--- a/public/style/common.css
+++ b/public/style/common.css
@@ -14,18 +14,12 @@ a{
 }
 
 .header{
-	width: 960px;
-	padding-top: 15px;
-	margin: 0 auto;
-	line-height: 30px;
-	text-align: right;
-}
-.header a{
-	margin: 0 5px;
+    margin-bottom: 15px;
 }
 .main{
 	width:960px;
 	margin: 50px auto 0;
+	padding-bottom: 25px;
 }
 .code{
 	border:1px dashed #e2e2e2;
@@ -34,12 +28,67 @@ a{
 }
 pre {
 	font-family: "Microsoft Yahei",Arial,Helvetica;
-	white-space: pre-wrap; /*css-3*/ 
-	white-space: -moz-pre-wrap; /*Mozilla,since1999*/ 
-	white-space: -pre-wrap; /*Opera4-6*/ 
-	white-space: -o-pre-wrap; /*Opera7*/ 
+	white-space: pre-wrap; /*css-3*/
+	white-space: -moz-pre-wrap; /*Mozilla,since1999*/
+	white-space: -pre-wrap; /*Opera4-6*/
+	white-space: -o-pre-wrap; /*Opera7*/
 	word-wrap: break-word; /*InternetExplorer5.5+*/
 }
+
+.mod-head .bd{
+    height: 36px;
+    padding: 10px 0;
+    text-align: right;
+}
+.mod-head .btn{
+    position: relative;
+    display: inline-block;
+    min-width: 56px;
+    height: 34px;
+    padding: 0 12px;
+    background: rgba(255,255,255,0.3);
+    border: 1px solid rgba(0,0,0,0.05);
+    border-radius: 6px;
+    line-height: 34px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 14px;
+    color: #333;
+    overflow: hidden;
+    transition: color .2s,opacity .2s;
+    font-family: Tahoma,Arial, Helvetica,"Microsoft YaHei";
+    outline: none;
+    -webkit-appearance: none;
+}
+.mod-head .btn:after {
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    transition: opacity .2s;
+    border-radius: 6px;
+    overflow: hidden;
+    pointer-events: none;
+}
+.mod-head .btn span,.mod-head .btn svg{
+    vertical-align: middle;
+}
+.mod-head .btn svg,.mod-head .btn svg+span{
+    position: relative;
+    top: -1px;
+}
+.mod-head .btn:hover {
+    color: #000;
+    opacity: 1;
+}
+.mod-head .btn:hover:after {
+    opacity: .02;
+}
+
 .example{
 	padding-top:40px;
 	margin-bottom:90px;
