--- a/public/style/common.css
+++ b/public/style/common.css
@@ -16,6 +16,10 @@ a{
 .header{
     margin-bottom: 15px;
 }
+.inner{
+	width:960px;
+	margin: 0 auto;
+}
 .container{
 	width:960px;
 	margin: 50px auto 0;
