--- a/public/style/common.css
+++ b/public/style/common.css
@@ -1,10 +1,11 @@
+html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}
 html{
 	height:100%;
 }
 body{
 	position: relative;
 	min-height:100%;
-	font-size:14px;
+	font-size:16px;
 	font-family: Tahoma, Verdana,"Microsoft Yahei";
 	color:#333;
 }
@@ -17,7 +18,7 @@ a{
     margin-bottom: 15px;
 }
 .inner{
-	width:960px;
+	width: 1000px;
 	margin: 0 auto;
 }
 .container{
